2008-07-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-07-21  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fix build break.

2008-07-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings, changed "mails" to "mail".

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings, fixed some typos.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings, fixed a typo.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Synchronized more strings, fixed a typo.

2008-07-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed bug #477082.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 201 to 317 of bug #438479.

2008-07-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 181 to 200 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 161 to 180 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 141 to 160 of bug #438479.

2008-07-20  Andre Klapper  <a9016009@gmx.de>

	* C/evolution.xml: Fixed comments 121 to 140 of bug #438479.
	Use &z-3rdParty; instead of *.
