@@ -1,3 +1,7 @@
+2008-07-21  Andre Klapper  <a9016009@gmx.de>
+
+	* C/evolution.xml: Fix most of bug 543883. Patch by Allan Day.
+
 2008-07-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Updated Spanish translation
